# fivetran-mcp

./: .gitignore  .mcp.example.json  CODE_OF_CONDUCT.md  README.md  fivetran-open-api-definition.json  fivetran-open-api-description-overrides.csv  license  pyproject.toml  requirements.txt  server.py  split_openapi_by_endpoint.py  test_server.py
.claude/skills/: refresh-tools.md
mcp-fivetran-api/: COMPARISON.md  DEPLOYMENT.md  README.md  pyproject.toml  server.py
mcp-fivetran-api/tests/: test_server.py
open-api-definitions/: endpoint-index.json
open-api-definitions/account/: get_account_info.json
open-api-definitions/certificates/: approve_certificate.json
open-api-definitions/connections/: approve_connection_certificate.json  approve_connection_fingerprint.json  connect_card.json  connection_column_config.json  connection_details.json  connection_schema_config.json  connection_state.json  create_connection.json  delete_column_connection_config.json  delete_connection.json  delete_multiple_columns_connection_config.json  get_connection_certificate_details.json  get_connection_certificates_list.json  get_connection_fingerprint_details.json  get_connection_fingerprints_list.json  list_connections.json  modify_connection.json  modify_connection_column_config.json  modify_connection_database_schema_config.json  modify_connection_schema_config.json  modify_connection_state.json  modify_connection_table_config.json  pre_create_connection_schema_config.json  reload_connection_schema_config.json  resync_connection.json  resync_tables.json  run_setup_tests.json  (+3 more)
(+137 files in other folders)
