[project]
name = "fivetran-mcp-optimized"
version = "1.0.0"
description = "Optimized Fivetran MCP Server with natural language interface"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.28.0", 
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fivetran-mcp-optimized"
Repository = "https://github.com/your-org/fivetran-mcp-optimized"
Documentation = "https://github.com/your-org/fivetran-mcp-optimized#readme"

[project.scripts]
fivetran-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]